sd-core/src/snapshots/sd_core__graph__tests__hypergraph_ad-minimal.chil.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("var_44"))),
    Edge(FreeVar(Variable("var_34"))),
    Edge(FreeVar(Variable("var_77"))),
    Edge(FreeVar(Variable("var_198"))),
    Edge(FreeVar(Variable("var_422"))),
    Edge(FreeVar(Variable("var_580"))),
    Operation(Op(Lambda)),
    Edge(Thunk(Addr)),
    Edge(BoundVar(Variable("var_1661"))),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(Variable("var_574"))),
        Edge(BoundVar(Variable("var_1659"))),
        Edge(BoundVar(Variable("var_1660"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_1665"))),
        Edge(BoundVar(Variable("var_1664"))),
        Edge(BoundVar(Variable("var_1666"))),
        Operation(Op(Plus)),
        Operation(Op(App)),
        Edge(BoundVar(Variable("var_1662"))),
        Edge(BoundVar(Variable("var_1663"))),
        Operation(Op(Plus)),
        Operation(Op(Plus)),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((4, 3, 0)),
        Some((5, 3, 1)),
        Some((3, 6, 0)),
        Some((7, 5, 0)),
        Some((0, 8, 0)),
        Some((9, 8, 1)),
        Some((10, 8, 2)),
        Some((8, 4, 0)),
        Some((2, 11, 0)),
        Some((11, 10, 0)),
        Some((1, 12, 0)),
        Some((12, 9, 0)),
      ],
    )),
    Edge(BoundVar(Variable("var_574"))),
    Operation(Op(Lambda)),
    Edge(Thunk(Addr)),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("var_580"))),
        Edge(FreeVar(Variable("var_422"))),
        Edge(BoundVar(Variable("var_572"))),
        Edge(BoundVar(Variable("var_573"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_582"))),
        Edge(BoundVar(Variable("var_583"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_575"))),
        Edge(Thunk(Addr)),
        Edge(Thunk(Addr)),
        Thunk(Graph(
          nodes: [
            Edge(BoundVar(Variable("var_577"))),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [],
        )),
        Edge(BoundVar(Variable("var_577"))),
        Thunk(Graph(
          nodes: [
            Edge(BoundVar(Variable("var_576"))),
            Edge(FreeVar(Variable("var_580"))),
            Edge(BoundVar(Variable("var_577"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_581"))),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((0, 3, 0)),
            Some((1, 3, 1)),
            Some((2, 3, 2)),
            Some((3, 4, 0)),
          ],
        )),
        Edge(BoundVar(Variable("var_576"))),
        Operation(Op(Plus)),
        Operation(Op(Plus)),
        Operation(Op(Plus)),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((5, 4, 0)),
        Some((4, 6, 0)),
        Some((8, 7, 0)),
        Some((9, 7, 1)),
        Some((10, 7, 2)),
        Some((7, 5, 0)),
        Some((12, 11, 0)),
        Some((11, 10, 0)),
        Some((14, 13, 0)),
        Some((0, 13, 1)),
        Some((12, 13, 2)),
        Some((13, 9, 0)),
        Some((2, 15, 0)),
        Some((1, 15, 1)),
        Some((15, 8, 0)),
        Some((3, 16, 0)),
        Some((16, 12, 0)),
        Some((2, 17, 0)),
        Some((17, 14, 0)),
      ],
    )),
    Operation(Op(Plus)),
    Edge(BoundVar(Variable("var_3173"))),
    Operation(Op(Lambda)),
    Edge(Thunk(Addr)),
    Edge(BoundVar(Variable("var_3100"))),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(Variable("var_3170"))),
        Edge(BoundVar(Variable("var_3098"))),
        Edge(BoundVar(Variable("var_3099"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_9386"))),
        Edge(BoundVar(Variable("var_3104"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_3102"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_3101"))),
        Operation(Op(Deref)),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((4, 3, 0)),
        Some((1, 3, 1)),
        Some((3, 5, 0)),
        Some((2, 6, 0)),
        Some((7, 6, 1)),
        Some((6, 4, 0)),
        Some((9, 8, 0)),
        Some((8, 7, 0)),
        Some((1, 10, 0)),
        Some((10, 9, 0)),
      ],
    )),
    Operation(Op(Lambda)),
    Edge(Thunk(Addr)),
    Edge(BoundVar(Variable("var_94"))),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("var_34"))),
        Edge(FreeVar(Variable("var_77"))),
        Edge(BoundVar(Variable("var_95"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_93"))),
        Edge(BoundVar(Variable("var_183"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_90"))),
        Edge(Thunk(Addr)),
        Thunk(Graph(
          nodes: [
            Edge(FreeVar(Variable("var_34"))),
            Edge(BoundVar(Variable("var_95"))),
            Edge(FreeVar(Variable("var_77"))),
            Edge(BoundVar(Variable("var_92"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_102"))),
            Edge(BoundVar(Variable("var_103"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_179"))),
            Edge(Thunk(Addr)),
            Edge(Thunk(Addr)),
            Thunk(Graph(
              nodes: [
                Edge(FreeVar(Variable("var_34"))),
                Edge(BoundVar(Variable("var_95"))),
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_101"))),
                Edge(BoundVar(Variable("var_182"))),
                Operation(Op(App)),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((3, 2, 0)),
                Some((2, 4, 0)),
                Some((0, 5, 0)),
                Some((1, 5, 1)),
                Some((5, 3, 0)),
              ],
            )),
            Thunk(Graph(
              nodes: [
                Edge(FreeVar(Variable("var_77"))),
                Edge(BoundVar(Variable("var_95"))),
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_99"))),
                Edge(BoundVar(Variable("var_181"))),
                Operation(Op(App)),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((3, 2, 0)),
                Some((2, 4, 0)),
                Some((0, 5, 0)),
                Some((1, 5, 1)),
                Some((5, 3, 0)),
              ],
            )),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_97"))),
            Operation(Op(Gt)),
            Edge(BoundVar(Variable("var_96"))),
            Operation(Op(Plus)),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((3, 4, 0)),
            Some((5, 4, 1)),
            Some((4, 6, 0)),
            Some((8, 7, 0)),
            Some((9, 7, 1)),
            Some((10, 7, 2)),
            Some((7, 5, 0)),
            Some((0, 11, 0)),
            Some((1, 11, 1)),
            Some((11, 10, 0)),
            Some((2, 12, 0)),
            Some((1, 12, 1)),
            Some((12, 9, 0)),
            Some((14, 13, 0)),
            Some((13, 8, 0)),
            Some((1, 15, 0)),
            Some((16, 15, 1)),
            Some((15, 14, 0)),
            Some((17, 16, 0)),
          ],
        )),
        Operation(Op(Atom)),
        Edge(BoundVar(Variable("var_89"))),
        Operation(Op(Plus)),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((4, 3, 0)),
        Some((3, 5, 0)),
        Some((7, 6, 0)),
        Some((8, 6, 1)),
        Some((6, 4, 0)),
        Some((0, 9, 0)),
        Some((2, 9, 1)),
        Some((1, 9, 2)),
        Some((9, 8, 0)),
        Some((11, 10, 0)),
        Some((10, 7, 0)),
        Some((12, 11, 0)),
      ],
    )),
    Operation(Op(Lambda)),
    Edge(Thunk(Addr)),
    Edge(BoundVar(Variable("var_61"))),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("var_34"))),
        Edge(FreeVar(Variable("var_44"))),
        Edge(BoundVar(Variable("var_62"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_60"))),
        Edge(BoundVar(Variable("var_192"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_57"))),
        Edge(Thunk(Addr)),
        Thunk(Graph(
          nodes: [
            Edge(FreeVar(Variable("var_34"))),
            Edge(BoundVar(Variable("var_62"))),
            Edge(FreeVar(Variable("var_44"))),
            Edge(BoundVar(Variable("var_59"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_69"))),
            Edge(BoundVar(Variable("var_70"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_188"))),
            Edge(Thunk(Addr)),
            Edge(Thunk(Addr)),
            Thunk(Graph(
              nodes: [
                Edge(FreeVar(Variable("var_34"))),
                Edge(BoundVar(Variable("var_62"))),
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_68"))),
                Edge(BoundVar(Variable("var_191"))),
                Operation(Op(App)),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((3, 2, 0)),
                Some((2, 4, 0)),
                Some((0, 5, 0)),
                Some((1, 5, 1)),
                Some((5, 3, 0)),
              ],
            )),
            Thunk(Graph(
              nodes: [
                Edge(FreeVar(Variable("var_44"))),
                Edge(BoundVar(Variable("var_62"))),
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_66"))),
                Edge(BoundVar(Variable("var_190"))),
                Operation(Op(App)),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((3, 2, 0)),
                Some((2, 4, 0)),
                Some((0, 5, 0)),
                Some((1, 5, 1)),
                Some((5, 3, 0)),
              ],
            )),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_64"))),
            Operation(Op(Gt)),
            Edge(BoundVar(Variable("var_63"))),
            Operation(Op(Plus)),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((3, 4, 0)),
            Some((5, 4, 1)),
            Some((4, 6, 0)),
            Some((8, 7, 0)),
            Some((9, 7, 1)),
            Some((10, 7, 2)),
            Some((7, 5, 0)),
            Some((0, 11, 0)),
            Some((1, 11, 1)),
            Some((11, 10, 0)),
            Some((2, 12, 0)),
            Some((1, 12, 1)),
            Some((12, 9, 0)),
            Some((14, 13, 0)),
            Some((13, 8, 0)),
            Some((1, 15, 0)),
            Some((16, 15, 1)),
            Some((15, 14, 0)),
            Some((17, 16, 0)),
          ],
        )),
        Operation(Op(Atom)),
        Edge(BoundVar(Variable("var_56"))),
        Operation(Op(Plus)),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((4, 3, 0)),
        Some((3, 5, 0)),
        Some((7, 6, 0)),
        Some((8, 6, 1)),
        Some((6, 4, 0)),
        Some((0, 9, 0)),
        Some((2, 9, 1)),
        Some((1, 9, 2)),
        Some((9, 8, 0)),
        Some((11, 10, 0)),
        Some((10, 7, 0)),
        Some((12, 11, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((7, 6, 0)),
    Some((6, 8, 0)),
    Some((10, 9, 0)),
    Some((9, 7, 0)),
    Some((12, 11, 0)),
    Some((11, 10, 0)),
    Some((5, 13, 0)),
    Some((4, 13, 1)),
    Some((13, 12, 0)),
    Some((3, 14, 0)),
    Some((14, 15, 0)),
    Some((17, 16, 0)),
    Some((16, 18, 0)),
    Some((19, 17, 0)),
    Some((21, 20, 0)),
    Some((20, 22, 0)),
    Some((1, 23, 0)),
    Some((2, 23, 1)),
    Some((23, 21, 0)),
    Some((25, 24, 0)),
    Some((24, 26, 0)),
    Some((1, 27, 0)),
    Some((0, 27, 1)),
    Some((27, 25, 0)),
  ],
)
