sd-core/src/snapshots/sd_core__graph__tests__hypergraph_aliasing.sd.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Op(Not)),
    Edge(BoundVar(Variable("a"))),
    Edge(BoundVar(Variable("b"))),
    Operation(Op(Not)),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((0, 2, 0)),
    Some((2, 3, 0)),
    Some((3, 1, 0)),
  ],
)
