sd-core/src/snapshots/sd_core__graph__tests__hypergraph_bad.sd.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("x"))),
    Operation(Op(Minus)),
    Edge(Nil),
    Edge(BoundVar(Variable("d"))),
    Operation(Op(Number(1))),
    Operation(Op(Eq)),
    Edge(Nil),
    Edge(BoundVar(Variable("c"))),
    Operation(Op(Number(1))),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((0, 1, 0)),
    Some((2, 1, 1)),
    Some((1, 3, 0)),
    Some((4, 2, 0)),
    Some((0, 5, 0)),
    Some((6, 5, 1)),
    Some((5, 7, 0)),
    Some((8, 6, 0)),
  ],
)
