sd-core/src/snapshots/sd_core__graph__tests__hypergraph_basic.chil.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("var_4"))),
    Operation(Op(Lambda)),
    Edge(Nil),
    Edge(BoundVar(Variable("var_1"))),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("var_4"))),
        Edge(BoundVar(Variable("var_3"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_5"))),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((1, 2, 0)),
        Some((0, 2, 1)),
        Some((2, 3, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((2, 1, 0)),
    Some((1, 3, 0)),
    Some((0, 4, 0)),
    Some((4, 2, 0)),
  ],
)
