sd-core/src/snapshots/sd_core__graph__tests__hypergraph_corrupt.sd.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Plus),
    Edge(BoundVar(Variable("x"))),
    Edge(Nil),
    Edge(BoundVar(Variable("y"))),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(Variable("x"))),
        Operation(Minus),
        Edge(Nil),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((0, 1, 0)),
        Some((1, 2, 0)),
      ],
    )),
    Operation(Number(1)),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((2, 0, 1)),
    Some((0, 3, 0)),
    Some((4, 2, 0)),
    Some((5, 1, 0)),
  ],
)
