sd-core/src/snapshots/sd_core__graph__tests__hypergraph_crashing.sd.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Lambda),
    Edge(Nil),
    Edge(Nil),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(Variable("y"))),
        Operation(Lambda),
        Edge(Nil),
        Edge(Nil),
        Thunk(Graph(
          nodes: [
            Edge(BoundVar(Variable("y"))),
            Operation(Plus),
            Edge(Nil),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((0, 1, 0)),
            Some((1, 2, 0)),
          ],
        )),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((2, 1, 0)),
        Some((1, 3, 0)),
        Some((0, 4, 0)),
        Some((4, 2, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((0, 2, 0)),
    Some((3, 1, 0)),
  ],
)
