sd-core/src/snapshots/sd_core__graph__tests__hypergraph_fact.sd.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(App),
    Edge(BoundVar(Variable("fact"))),
    Edge(Op),
    Edge(BoundVar(Variable("a"))),
    Operation(Number(5)),
    Operation(Lambda),
    Edge(Thunk(Addr)),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(Variable("fact"))),
        Edge(BoundVar(Variable("x"))),
        Operation(If),
        Edge(BoundVar(Variable("y1"))),
        Edge(Op),
        Edge(BoundVar(Variable("y4"))),
        Edge(BoundVar(Variable("y5"))),
        Operation(Number(1)),
        Operation(Times),
        Edge(BoundVar(Variable("y3"))),
        Operation(App),
        Edge(BoundVar(Variable("y2"))),
        Operation(Minus),
        Edge(Op),
        Operation(Number(1)),
        Operation(Eq),
        Edge(Op),
        Operation(Number(1)),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((3, 2, 0)),
        Some((4, 2, 1)),
        Some((5, 2, 2)),
        Some((2, 6, 0)),
        Some((7, 4, 0)),
        Some((1, 8, 0)),
        Some((9, 8, 1)),
        Some((8, 5, 0)),
        Some((0, 10, 0)),
        Some((11, 10, 1)),
        Some((10, 9, 0)),
        Some((1, 12, 0)),
        Some((13, 12, 1)),
        Some((12, 11, 0)),
        Some((14, 13, 0)),
        Some((1, 15, 0)),
        Some((16, 15, 1)),
        Some((15, 3, 0)),
        Some((17, 16, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((2, 0, 1)),
    Some((0, 3, 0)),
    Some((4, 2, 0)),
    Some((6, 5, 0)),
    Some((5, 1, 0)),
    Some((1, 7, 0)),
    Some((7, 6, 0)),
  ],
)
