sd-core/src/snapshots/sd_core__graph__tests__hypergraph_fibonacci.chil.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("var_71"))),
    Edge(FreeVar(Variable("var_66"))),
    Edge(FreeVar(Variable("var_76"))),
    Operation(Op(Plus)),
    Edge(BoundVar(Variable("var_25"))),
    Edge(BoundVar(Variable("var_63"))),
    Edge(BoundVar(Variable("var_81"))),
    Operation(Op(Lambda)),
    Edge(Thunk(Addr)),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("var_76"))),
        Edge(FreeVar(Variable("var_71"))),
        Edge(FreeVar(Variable("var_66"))),
        Edge(BoundVar(Variable("var_25"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_59"))),
        Edge(Thunk(Addr)),
        Edge(BoundVar(Variable("var_62"))),
        Thunk(Graph(
          nodes: [
            Edge(FreeVar(Variable("var_76"))),
            Edge(FreeVar(Variable("var_71"))),
            Edge(FreeVar(Variable("var_66"))),
            Edge(BoundVar(Variable("var_25"))),
            Edge(BoundVar(Variable("var_61"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_70"))),
            Edge(BoundVar(Variable("var_79"))),
            Edge(BoundVar(Variable("var_80"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_78"))),
            Operation(Op(Number(0))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_67"))),
            Edge(Thunk(Addr)),
            Thunk(Graph(
              nodes: [
                Edge(FreeVar(Variable("var_76"))),
                Edge(FreeVar(Variable("var_71"))),
                Edge(BoundVar(Variable("var_69"))),
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_72"))),
                Edge(Thunk(Addr)),
                Edge(BoundVar(Variable("var_75"))),
                Thunk(Graph(
                  nodes: [
                    Edge(FreeVar(Variable("var_76"))),
                    Edge(BoundVar(Variable("var_69"))),
                    Edge(BoundVar(Variable("var_74"))),
                    Operation(Op(App)),
                    Edge(BoundVar(Variable("var_77"))),
                  ],
                  node_holes: [],
                  edge_property: directed,
                  edges: [
                    Some((0, 3, 0)),
                    Some((1, 3, 1)),
                    Some((2, 3, 2)),
                    Some((3, 4, 0)),
                  ],
                )),
                Operation(Op(App)),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((4, 3, 0)),
                Some((5, 3, 1)),
                Some((3, 6, 0)),
                Some((0, 7, 0)),
                Some((2, 7, 1)),
                Some((7, 5, 0)),
                Some((1, 8, 0)),
                Some((2, 8, 1)),
                Some((8, 4, 0)),
              ],
            )),
            Operation(Op(App)),
            Edge(BoundVar(Variable("var_65"))),
            Operation(Op(App)),
            Edge(BoundVar(Variable("var_64"))),
            Operation(Op(Number(21))),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((6, 5, 0)),
            Some((7, 5, 1)),
            Some((5, 8, 0)),
            Some((4, 9, 0)),
            Some((10, 9, 1)),
            Some((9, 7, 0)),
            Some((11, 10, 0)),
            Some((13, 12, 0)),
            Some((14, 12, 1)),
            Some((12, 6, 0)),
            Some((0, 15, 0)),
            Some((1, 15, 1)),
            Some((15, 14, 0)),
            Some((2, 16, 0)),
            Some((17, 16, 1)),
            Some((16, 13, 0)),
            Some((3, 18, 0)),
            Some((19, 18, 1)),
            Some((18, 17, 0)),
            Some((20, 19, 0)),
          ],
        )),
        Operation(Op(Atom)),
        Edge(BoundVar(Variable("var_58"))),
        Operation(Op(Plus)),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((5, 4, 0)),
        Some((6, 4, 1)),
        Some((4, 7, 0)),
        Some((0, 8, 0)),
        Some((1, 8, 1)),
        Some((2, 8, 2)),
        Some((3, 8, 3)),
        Some((8, 6, 0)),
        Some((10, 9, 0)),
        Some((9, 5, 0)),
        Some((11, 10, 0)),
      ],
    )),
    Operation(Op(Lambda)),
    Edge(Thunk(Addr)),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(Variable("var_25"))),
        Edge(BoundVar(Variable("var_26"))),
        Operation(Op(Plus)),
        Edge(BoundVar(Variable("var_21"))),
        Edge(Thunk(Addr)),
        Edge(BoundVar(Variable("var_24"))),
        Thunk(Graph(
          nodes: [
            Edge(BoundVar(Variable("var_25"))),
            Edge(BoundVar(Variable("var_26"))),
            Edge(BoundVar(Variable("var_23"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_36"))),
            Edge(BoundVar(Variable("var_55"))),
            Edge(BoundVar(Variable("var_56"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_46"))),
            Edge(BoundVar(Variable("var_54"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_53"))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_49"))),
            Edge(BoundVar(Variable("var_52"))),
            Operation(Op(App)),
            Edge(BoundVar(Variable("var_51"))),
            Operation(Op(Minus)),
            Edge(BoundVar(Variable("var_50"))),
            Operation(Op(Number(2))),
            Operation(Op(App)),
            Edge(BoundVar(Variable("var_48"))),
            Operation(Op(Minus)),
            Edge(BoundVar(Variable("var_47"))),
            Operation(Op(Number(1))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_38"))),
            Edge(Thunk(Addr)),
            Edge(Thunk(Addr)),
            Thunk(Graph(
              nodes: [
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_45"))),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((0, 1, 0)),
              ],
            )),
            Thunk(Graph(
              nodes: [
                Edge(BoundVar(Variable("var_23"))),
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_41"))),
                Edge(BoundVar(Variable("var_42"))),
                Edge(BoundVar(Variable("var_43"))),
                Operation(Op(Plus)),
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_40"))),
                Operation(Op(Number(1))),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((2, 1, 0)),
                Some((3, 1, 1)),
                Some((1, 4, 0)),
                Some((5, 3, 0)),
                Some((0, 6, 0)),
                Some((7, 6, 1)),
                Some((6, 2, 0)),
                Some((8, 7, 0)),
              ],
            )),
            Operation(Op(Eq)),
            Edge(BoundVar(Variable("var_37"))),
            Operation(Op(Number(1))),
            Operation(Op(Plus)),
            Edge(BoundVar(Variable("var_28"))),
            Edge(Thunk(Addr)),
            Edge(Thunk(Addr)),
            Thunk(Graph(
              nodes: [
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_35"))),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((0, 1, 0)),
              ],
            )),
            Thunk(Graph(
              nodes: [
                Edge(BoundVar(Variable("var_23"))),
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_31"))),
                Edge(BoundVar(Variable("var_32"))),
                Edge(BoundVar(Variable("var_33"))),
                Operation(Op(Plus)),
                Operation(Op(Plus)),
                Edge(BoundVar(Variable("var_30"))),
                Operation(Op(Number(0))),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((2, 1, 0)),
                Some((3, 1, 1)),
                Some((1, 4, 0)),
                Some((5, 3, 0)),
                Some((0, 6, 0)),
                Some((7, 6, 1)),
                Some((6, 2, 0)),
                Some((8, 7, 0)),
              ],
            )),
            Operation(Op(Eq)),
            Edge(BoundVar(Variable("var_27"))),
            Operation(Op(Number(0))),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((4, 3, 0)),
            Some((5, 3, 1)),
            Some((3, 6, 0)),
            Some((8, 7, 0)),
            Some((9, 7, 1)),
            Some((7, 5, 0)),
            Some((2, 10, 0)),
            Some((11, 10, 1)),
            Some((10, 9, 0)),
            Some((13, 12, 0)),
            Some((14, 12, 1)),
            Some((12, 11, 0)),
            Some((0, 15, 0)),
            Some((16, 15, 1)),
            Some((15, 14, 0)),
            Some((1, 17, 0)),
            Some((18, 17, 1)),
            Some((17, 16, 0)),
            Some((19, 18, 0)),
            Some((0, 20, 0)),
            Some((21, 20, 1)),
            Some((20, 13, 0)),
            Some((1, 22, 0)),
            Some((23, 22, 1)),
            Some((22, 21, 0)),
            Some((24, 23, 0)),
            Some((26, 25, 0)),
            Some((27, 25, 1)),
            Some((28, 25, 2)),
            Some((25, 8, 0)),
            Some((29, 28, 0)),
            Some((2, 30, 0)),
            Some((30, 27, 0)),
            Some((1, 31, 0)),
            Some((32, 31, 1)),
            Some((31, 26, 0)),
            Some((33, 32, 0)),
            Some((35, 34, 0)),
            Some((36, 34, 1)),
            Some((37, 34, 2)),
            Some((34, 4, 0)),
            Some((38, 37, 0)),
            Some((2, 39, 0)),
            Some((39, 36, 0)),
            Some((1, 40, 0)),
            Some((41, 40, 1)),
            Some((40, 35, 0)),
            Some((42, 41, 0)),
          ],
        )),
        Operation(Op(Atom)),
        Edge(BoundVar(Variable("var_20"))),
        Operation(Op(Plus)),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((3, 2, 0)),
        Some((4, 2, 1)),
        Some((2, 5, 0)),
        Some((0, 6, 0)),
        Some((1, 6, 1)),
        Some((6, 4, 0)),
        Some((8, 7, 0)),
        Some((7, 3, 0)),
        Some((9, 8, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((4, 3, 0)),
    Some((5, 3, 1)),
    Some((3, 6, 0)),
    Some((8, 7, 0)),
    Some((7, 5, 0)),
    Some((2, 9, 0)),
    Some((0, 9, 1)),
    Some((1, 9, 2)),
    Some((4, 9, 3)),
    Some((9, 8, 0)),
    Some((11, 10, 0)),
    Some((10, 4, 0)),
    Some((4, 12, 0)),
    Some((12, 11, 0)),
  ],
)
