sd-core/src/snapshots/sd_core__graph__tests__hypergraph_mutual_bad.sd.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Not),
    Edge(BoundVar(Variable("a"))),
    Edge(BoundVar(Variable("d"))),
    Operation(Times),
    Edge(BoundVar(Variable("b"))),
    Operation(Minus),
    Edge(BoundVar(Variable("c"))),
    Operation(Plus),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((0, 2, 0)),
    Some((4, 3, 0)),
    Some((3, 1, 0)),
    Some((1, 5, 0)),
    Some((5, 6, 0)),
    Some((6, 7, 0)),
    Some((7, 4, 0)),
  ],
)
